tests/expected_json/uninitialized_storage_pointer.uninitialized-storage.txt
ERROR:root:Error in tests/uninitialized_storage_pointer.sol
ERROR:root:Traceback (most recent call last):
  File "/home/monty/Private/tob/tools/crytic-compile/crytic_compile/platform/solc.py", line 189, in _run_solc
    ret = json.loads(stdout)
  File "/usr/lib/python3.6/json/__init__.py", line 354, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.6/json/decoder.py", line 339, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.6/json/decoder.py", line 357, in raw_decode
    raise JSONDecodeError("Expecting value", s, err.value) from None
json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/monty/Private/tob/tools/slither-public/slither/slither.py", line 56, in __init__
    crytic_compile = CryticCompile(contract, **kwargs)
  File "/home/monty/Private/tob/tools/crytic-compile/crytic_compile/crytic_compile.py", line 68, in __init__
    self._compile(target, **kwargs)
  File "/home/monty/Private/tob/tools/crytic-compile/crytic_compile/crytic_compile.py", line 590, in _compile
    self._platform.compile(self, target, **kwargs)
  File "/home/monty/Private/tob/tools/crytic-compile/crytic_compile/platform/solc.py", line 33, in compile
    working_dir=solc_working_dir)
  File "/home/monty/Private/tob/tools/crytic-compile/crytic_compile/platform/solc.py", line 192, in _run_solc
    raise InvalidCompilation(f'Invalid solc compilation {stderr}')
crytic_compile.platform.exceptions.InvalidCompilation: Invalid solc compilation tests/uninitialized_storage_pointer.sol:7:5: Error: No visibility specified. Did you intend to add "public"?
    function func() {
    ^ (Relevant source part starts here and spans across multiple lines).
tests/uninitialized_storage_pointer.sol:1:1: Warning: Source file does not specify required compiler version! Consider adding "pragma solidity ^0.5.1;"
contract Uninitialized{
^ (Relevant source part starts here and spans across multiple lines).
tests/uninitialized_storage_pointer.sol:8:9: Error: Data location must be "storage" or "memory" for variable, but none was given.
        St st; // non init, but never read so its fine
        ^---^
tests/uninitialized_storage_pointer.sol:10:9: Error: Data location must be "storage" or "memory" for variable, but none was given.
        St st_bug;
        ^-------^


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/monty/Private/tob/tools/slither-public/slither/__main__.py", line 558, in main_impl
    (results, number_contracts) = process(filename, args, detector_classes, printer_classes)
  File "/home/monty/Private/tob/tools/slither-public/slither/__main__.py", line 51, in process
    **vars(args))
  File "/home/monty/Private/tob/tools/slither-public/slither/slither.py", line 59, in __init__
    raise SlitherError('Invalid compilation: '+e)
TypeError: must be str, not InvalidCompilation

